13.12.2023
==========
hcxhashtool: changed options hccapx and hccap
--hccapx-out=<file>          : output to deprecated hccapx file
--hccap-out=<file>           : output to ancient hccap file


01.11.2023
==========
release v6.3.2


26.09.2023
==========
hcxpsktool: added simple pattern generator based on analysis of wpa-sec
--simple            : include simple pattern


04.07.2023
==========
added -Wpedantic to compiler flags and fixed all warnings


30.06.2023
==========
release v6.3.1


13.05.2023
==========
hcxhashtool: allow to print ESSID list to stdout
-E <file>   : output ESSID list (autohex enabled)
-E stdout   : output ESSID list to stdout (autohex enabled)


10.05.2023
==========
hcxpcapngtool: added new option store PMKIDs coming from a CLIENT to a separate hash file.
--pmkid-client=<file>              : output WPA-(MESH/REPEATER)-PMKID hash file (hashcat -m 22000)
to sucessfully recover the PSK from this PMKIDs, it is mandatory to store all PMKIDs coming from a CLIENT to this file

added information about source to the end of WPA*01 hash line:
PMKID from ACCESS POINT: WPA*01*PMKID*MAC_AP*MAC_CLIENT*ESSID***01
PMKID from CLIENT      : WPA*01*PMKID*MAC_AP*MAC_CLIENT*ESSID***10


05.05.2023
==========
release v6.3.0
hcxhashtool/whoismac: do not overwrite oui.txt in case of download ERROR


10.03.2023
==========
release v6.2.9
hcxpcapngtool moved default timestamp from usec to nsec (timeval to timespec)


10.03.2023
==========
release v6.2.8
moved to EVP API 3.0 (from now on OpenSSL >= 3.0 is mandatory)
hcxpcapngtool: handle nsec timestamps 


24.12.2022
==========
hcxpcapngtool: added detection of entire RADIUS detection
RADIUS AUTHENTICATION (REQUEST)..........: 2
RADIUS AUTHENTICATION (CHALLENGE)........: 1
RADIUS AUTHENTICATION (ACCEPT)...........: 1


23.12.2022
==========
wlancap2wpasec: moved to curl_mime_xxx
from now on curl >= 7.56 is mandatory


14.12.2022
==========